Working on metadata, login and session components

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "slim/slim": "2.*",
 	    "datafilter/datafilter": "dev-master",
-        "gabordemooij/redbean": "dev-master"
+        "gabordemooij/redbean": "dev-master",
+        "ircmaxell/password-compat": "dev-master"
     }
 }
